fix vertical overflow by reducing column height

--- a/style.scss
+++ b/style.scss
@@ -9,10 +9,6 @@ body, html {
   height: 100%;
 }
 
-body {
-  overflow-y: hidden;
-
-}
 
 * {
   //print precisely
